# gazelle-bug

./: MODULE.bazel  go.mod
