module(
  name = "gazelle-bug",
  repo_name = "test_gazelle-bug",
  version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "rules_go")
bazel_dep(name = "gazelle", version = "0.32.0", repo_name = "gazelle")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.21.0")

go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
)
